fix: Fix packaging of app for EC2