@@ -1,7 +1,7 @@
 import com.gu.riffraff.artifact.BuildInfo
 
 lazy val root = (project in file("."))
-  .enablePlugins(PlayScala, BuildInfoPlugin, RiffRaffArtifact)
+  .enablePlugins(PlayScala, BuildInfoPlugin, RiffRaffArtifact, JDebPackaging, SystemdPlugin)
   .settings(
     name := """cdk-playground""",
     version := "1.0-SNAPSHOT",
@@ -13,6 +13,16 @@ lazy val root = (project in file("."))
       "-feature",
       "-unchecked",
       "-Xfatal-warnings"
+    ),
+    javaOptions in Universal ++= Seq(
+      s"-Dpidfile.path=/dev/null",
+      "-J-XX:MaxRAMFraction=2",
+      "-J-XX:InitialRAMFraction=2",
+      "-J-XX:MaxMetaspaceSize=300m",
+      "-J-XX:+PrintGCDetails",
+      "-J-XX:+PrintGCDateStamps",
+      s"-J-Dlogs.home=/var/log/${packageName.value}",
+      s"-J-Xloggc:/var/log/${packageName.value}/gc.log",
     ),
     riffRaffArtifactResources := Seq(
       (packageBin in Debian).value -> s"${name.value}/${name.value}.deb",
